--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,23 +5,26 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.infanciacuenta.WalkthroughActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.infanciacuenta.MainActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
