--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.infanciacuenta.WalkthroughActivity"
+            android:name="mx.infanciacuenta.WalkthroughActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.infanciacuenta.MainActivity"
+        <activity android:name="mx.infanciacuenta.MainActivity"
             android:screenOrientation="portrait"></activity>
     </application>
 
