--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/mx/infanciacuenta/GraphActivity.java=UTF-8
 encoding//src/mx/infanciacuenta/adapters/ViewAdapter.java=UTF-8
+encoding//src/mx/infanciacuenta/fragments/MainFragment.java=UTF-8
